force-app/main/default/objects/LabBookingApplication__c/LabBookingApplication__c.object-meta.xml
<CustomObject>
    <label>实验室预约申请</label>
    <nameField>
        <displayFormat>LBA-{000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>