force-app/main/default/objects/LabBookingApplication__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申请人</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>实验室预约申请</relationshipLabel>
    <relationshipName>LBAApplicant</relationshipName>
    <type>Lookup</type>
</CustomField>