force-app/main/default/objects/LabBookingApplication__c/fields/ApplicantText__c.field-meta.xml
<CustomField>
    <fullName>ApplicantText__c</fullName>
    <formula>Applicant__r.LastName</formula>
    <label>申请人名称</label>
    <type>Text</type>
</CustomField>