force-app/main/default/objects/LabBookingApplication__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>批准状态</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApprovalStatusGlobal</valueSetName>
    </valueSet>
</CustomField>