force-app/main/default/objects/LabBookingApplication__c/fields/BookedLab__c.field-meta.xml
<CustomField>
    <fullName>BookedLab__c</fullName>
    <label>预约的实验室</label>
    <referenceTo>LabBooking__c</referenceTo>
    <relationshipLabel>预约申请</relationshipLabel>
    <relationshipName>LabBookingApplications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>