force-app/main/default/objects/LabBookingApplication__c/fields/BookingPeriod__c.field-meta.xml
<CustomField>
    <fullName>BookingPeriod__c</fullName>
    <formula>IF(
				ISBLANK(BookedLab__r.OpeningTime__c) &amp;&amp; ISBLANK(BookedLab__r.ClosingTime__c),
				&quot;&quot;,
				TEXT(YEAR(DATEVALUE(BookedLab__r.OpeningTime__c + 8 / 24))) &amp; &quot;/&quot; &amp; 
				TEXT(MONTH(DATEVALUE(BookedLab__r.OpeningTime__c + 8 / 24))) &amp; &quot;/&quot; &amp; 
				TEXT(DAY(DATEVALUE(BookedLab__r.OpeningTime__c + 8 / 24))) &amp; &quot; &quot; &amp; 
				LPAD(TEXT(HOUR(TIMEVALUE(BookedLab__r.OpeningTime__c + 8 / 24))),2,&apos;0&apos;) &amp; &quot;:&quot; &amp; 
				LPAD(TEXT(MINUTE(TIMEVALUE(BookedLab__r.OpeningTime__c + 8 / 24))),2,&apos;0&apos;) &amp; &quot; - &quot; &amp; 
				TEXT(YEAR(DATEVALUE(BookedLab__r.ClosingTime__c + 8 / 24))) &amp; &quot;/&quot; &amp; 
				TEXT(MONTH(DATEVALUE(BookedLab__r.ClosingTime__c + 8 / 24))) &amp; &quot;/&quot; &amp; 
				TEXT(DAY(DATEVALUE(BookedLab__r.ClosingTime__c + 8 / 24))) &amp; &quot; &quot; &amp; 
				LPAD(TEXT(HOUR(TIMEVALUE(BookedLab__r.OpeningTime__c + 8 / 24))),2,&apos;0&apos;) &amp; &quot;:&quot; &amp; 
				LPAD(TEXT(MINUTE(TIMEVALUE(BookedLab__r.OpeningTime__c + 8 / 24))),2,&apos;0&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>预约时段</label>
    <type>Text</type>
</CustomField>