force-app/main/default/objects/LabBookingApplication__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>班级</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>二级学院班级</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>实验室预约申请(班级维度)</relationshipLabel>
    <relationshipName>LBAClass</relationshipName>
    <type>Lookup</type>
</CustomField>