force-app/main/default/objects/LabBookingApplication__c/fields/LabAddress__c.field-meta.xml
<CustomField>
    <fullName>LabAddress__c</fullName>
    <formula>BookedLab__r.LabAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>实验室地址</label>
    <type>Text</type>
</CustomField>