force-app/main/default/objects/LabBookingApplication__c/fields/X1stApprover__c.field-meta.xml
<CustomField>
    <fullName>X1stApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>此字段将在保存后自动从“预约的实验室”中的“审批人”字段取值，无需手动填写。</inlineHelpText>
    <label>审批人</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LBA1stApprover</relationshipName>
    <type>Lookup</type>
</CustomField>