force-app/main/default/objects/LabBookingApplication__c/recordTypes/CommonBookingApplication.recordType-meta.xml
<RecordType>
    <fullName>CommonBookingApplication</fullName>
    <active>true</active>
    <label>通用预约单</label>
</RecordType>